--- a/BitProject/WebContent/WEB-INF/index.html
+++ b/BitProject/WebContent/WEB-INF/index.html
@@ -11,17 +11,15 @@
     <title>Stylish Portfolio - Start Bootstrap Template</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom CSS -->
-    <link href="/css/stylish-portfolio.css" rel="stylesheet">
+    <link href="css/stylish-portfolio.css" rel="stylesheet">
 
-	<!-- java script -->
-	<script src="/js/pageScript.js"></script>
   </head>
 
   <body>
@@ -35,19 +33,19 @@
           <i class="fa fa-times"></i>
         </a>
         <li class="sidebar-brand">
-          <a class="js-scroll-trigger" href="#top"><img alt="FreeHaGae" src="/images/logo.png" width="130px"></a>
+          <a class="js-scroll-trigger" href="#top">Start Bootstrap</a>
         </li>
         <li>
           <a class="js-scroll-trigger" href="#top">Home</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#services">Shopping</a>
+          <a class="js-scroll-trigger" href="#about">About</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" onclick="location='main'">Sign out</a>
+          <a class="js-scroll-trigger" href="#services">Services</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" onclick="myPagebutton('myPageMain')">My page</a>
+          <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
         </li>
         <li>
           <a class="js-scroll-trigger" href="#contact" onclick=$( "#menu-close").click();>Contact</a>
@@ -58,10 +56,10 @@
     <!-- Header -->
     <header class="header" id="top">
       <div class="text-vertical-center">
-        <h1>FreeHaGae</h1>
-        <h3>Hand Made &amp; Pet Product</h3>
+        <h1>Start Bootstrap</h1>
+        <h3>Free Bootstrap Themes &amp; Templates</h3>
         <br>
-        <a href="#about" class="btn btn-dark btn-lg js-scroll-trigger">Shopping GO!!</a>
+        <a href="#about" class="btn btn-dark btn-lg js-scroll-trigger">Find Out More</a>
       </div>
     </header>
 
@@ -163,28 +161,28 @@
               <div class="col-md-6">
                 <div class="portfolio-item">
                   <a href="#">
-                    <img class="img-portfolio img-fluid" src="/images/portfolio-1.jpg">
+                    <img class="img-portfolio img-fluid" src="img/portfolio-1.jpg">
                   </a>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="portfolio-item">
                   <a href="#">
-                    <img class="img-portfolio img-fluid" src="/images/portfolio-2.jpg">
+                    <img class="img-portfolio img-fluid" src="img/portfolio-2.jpg">
                   </a>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="portfolio-item">
                   <a href="#">
-                    <img class="img-portfolio img-fluid" src="/images/portfolio-3.jpg">
+                    <img class="img-portfolio img-fluid" src="img/portfolio-3.jpg">
                   </a>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="portfolio-item">
                   <a href="#">
-                    <img class="img-portfolio img-fluid" src="/images/portfolio-4.jpg">
+                    <img class="img-portfolio img-fluid" src="img/portfolio-4.jpg">
                   </a>
                 </div>
               </div>
@@ -265,15 +263,15 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="/jquery/jquery.min.js"></script>
-    <script src="/popper/popper.min.js"></script>
-    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/popper/popper.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="/jquery-easing/jquery.easing.min.js"></script>
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="/js/stylish-portfolio.js"></script>
+    <script src="js/stylish-portfolio.js"></script>
 
   </body>
 
